--- a/docs/examples/Themis-server/Obj-C/WorkingWithThemisServer/WorkingWithThemisServer/Base.lproj/LaunchScreen.storyboard
+++ b/docs/examples/Themis-server/Obj-C/WorkingWithThemisServer/WorkingWithThemisServer/Base.lproj/LaunchScreen.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -23,13 +22,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Themis Server Example ObjC" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YtC-cy-O2u">
-                                <rect key="frame" x="43" y="156" width="289" height="21"/>
+                                <rect key="frame" x="76" y="156" width="223" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Copyright (c) 2015-2017 Cossack Labs. All rights reserved." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSF-Q5-9YO">
-                                <rect key="frame" x="43" y="544" width="289" height="57"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright (c) 2015-2019 Cossack Labs. All rights reserved." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tSF-Q5-9YO">
+                                <rect key="frame" x="43" y="547" width="289" height="57"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="57" id="y18-5p-OEg"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -37,11 +39,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="tSF-Q5-9YO" secondAttribute="bottom" constant="66" id="5CW-sO-PYk"/>
-                            <constraint firstItem="YtC-cy-O2u" firstAttribute="trailing" secondItem="tSF-Q5-9YO" secondAttribute="trailing" id="JdI-P8-j6Q"/>
-                            <constraint firstItem="YtC-cy-O2u" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="27" id="W6S-R8-04m"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="tSF-Q5-9YO" secondAttribute="bottom" constant="63" id="5CW-sO-PYk"/>
+                            <constraint firstItem="tSF-Q5-9YO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="5q6-10-B6f"/>
+                            <constraint firstItem="tSF-Q5-9YO" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="27" id="99g-sJ-ieZ"/>
+                            <constraint firstItem="YtC-cy-O2u" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="W6S-R8-04m"/>
                             <constraint firstItem="YtC-cy-O2u" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="136" id="X5K-1R-N4Z"/>
-                            <constraint firstItem="YtC-cy-O2u" firstAttribute="leading" secondItem="tSF-Q5-9YO" secondAttribute="leading" id="dsQ-c5-feG"/>
                             <constraint firstItem="YtC-cy-O2u" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="mcB-VR-VyY"/>
                         </constraints>
                     </view>
